poc/tests/errors/test_FplVariableAlreadyDeclared_functional_term_ok.fpl
Test.Namespace
{
    theory
    {
        func Test(z: Nat) -> Nat
        {
            y: Nat
            return z

            mandatory Nat TestProperty()
            {
                x: Nat
                self:=x
            }

            mandatory func TestProperty() -> Nat
            {
                x: Nat
                return x
            }

            mandatory pred TestProperty()
            {
                x: Nat
                true
            }
        }
    }
}

##############################

Note: Generates no FplVariableAlreadyDeclared error since the variable x is declared in separate scopes
